Fix odd padding and gif rendering on firefox

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,3 +1,8 @@
+/* Get rid of default padding */
+* {
+    padding: 0
+}
+
 /* Phoenix inline forms in links and buttons */
 form.link, form.button {
   display: inline;
